# elise

./: Cargo.toml  README.md
benches/: basic.rs
crates/derive/: Cargo.toml  accessors.rs  lib.rs  null_trace.rs  reroot.rs  trace.rs
crates/gc/: Cargo.toml  alloc.rs  gc_ptr.rs  lib.rs  list.rs  root.rs  state.rs  trace.rs
examples/: cells.rs  example.rs  features.rs
src/: gc.rs  gc_store.rs  lib.rs  no_trace.rs  store.rs  tests.rs
src/lib/derive/: accessors.rs  lib.rs  null_trace.rs  reroot.rs  trace.rs
src/lib/gc/: Cargo.toml  alloc.rs  gc_ptr.rs  lib.rs  list.rs  root.rs  state.rs  trace.rs
src/root/: heap_root.rs  reroot.rs  stack_root.rs
