[package]
name = "elise"
version = "0.1.0"
edition = "2021"
description = "A concurrent GC."
license = "Apache-2.0 OR MIT"

[dependencies]
pin-cell = "0.1.1"

[dependencies.derive]
path = "crates/derive"
version = "0.1.0"
package = "elise-derive"

[dependencies.gc]
path = "crates/gc"
version = "0.1.0"
package = "elise-gc"

[dev-dependencies]
env_logger = "0.5.13"

[workspace]
members = [
    "crates/derive",
    "crates/gc",
]
