[package]
name = "elise"
version = "0.1.1"
edition = "2021"
description = "A concurrent GC."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/wusyong/Elise"
documentation = "https://docs.rs/elise"
readme = "README.md"

[dependencies]
pin-cell = "0.1.1"

[dependencies.derive]
path = "crates/derive"
version = "0.1.1"
package = "elise-derive"

[dependencies.gc]
path = "crates/gc"
version = "0.1.1"
package = "elise-gc"

[dev-dependencies]
criterion = "0.3.5"
env_logger = "0.5.13"
shifgrethor = { git = "https://github.com/withoutboats/shifgrethor" }

[workspace]
members = [
    "crates/derive",
    "crates/gc",
]

[[bench]]
name = "basic"
harness = false