[package]
name = "elise-derive"
edition = "2021"
version = "0.1.1"
description = "Macros Für Elise"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/wusyong/Elise"
documentation = "https://docs.rs/elise-derive"

[dependencies]
quote = "0.6.8"
synstructure = "0.9.0"
proc-macro2 = "0.4.19"

[lib]
path = "lib.rs"
proc-macro = true

[dependencies.syn]
version = "0.14.9"
features = ["full", "fold"]
