[package]
name = "elise-gc"
edition = "2021"
version = "0.1.1"
description = "Raw GC Für Elise"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/wusyong/Elise"
documentation = "https://docs.rs/elise-gc"

[lib]
path = "lib.rs"

[dependencies]
crossbeam = "0.8"
dashmap = "5.3"
log = "0.4.5"
once_cell = "1.12"
parking_lot = "0.12"
pin-cell = "0.1.1"
